@@ -8,7 +8,7 @@ define( function( require ) {
   var Shape = require( 'KITE/Shape' );
   var SimpleDragHandler = require( 'SCENERY/input/SimpleDragHandler' );
   var Bounds2 = require( 'DOT/Bounds2' );
-  var Inheritance = require( 'PHETCOMMON/util/Inheritance' );
+  var inherit = require( 'PHET_CORE/inherit' );
 
   function ItemNode( model, scenery, item, image, imageSitting, imageHolding, showMassesProperty ) {
     var itemNode = this;
@@ -89,7 +89,7 @@ define( function( require ) {
     showMassesProperty.link( function( m, showMasses ) { labelNode.visible = showMasses; } );
   }
 
-  Inheritance.inheritPrototype( ItemNode, Node );
+  inherit( ItemNode, Node );
 
   return ItemNode;
 } );
