@@ -9,7 +9,7 @@ define( function( require ) {
   var Shape = require( 'KITE/Shape' );
   var SimpleDragHandler = require( 'SCENERY/input/SimpleDragHandler' );
   var Bounds2 = require( 'DOT/Bounds2' );
-  var Inheritance = require( 'PHETCOMMON/util/Inheritance' );
+  var inherit = require( 'PHET_CORE/inherit' );
 
   function ItemNode( model, imageLoader ) {
     var itemNode = this;
@@ -55,7 +55,7 @@ define( function( require ) {
         } ) );
   }
 
-  Inheritance.inheritPrototype( ItemNode, Node );
+  inherit( ItemNode, Node );
 
   return ItemNode;
 } );
