@@ -1,3 +1,4 @@
+Switched from phetcommon/inheritance to phet_core/inherit
 Switched to more central use of scenery, including switching to sun widgets instead of bootstrap widgets
 Improved performance by decreasing image scales
 Use FastClick and remove extraneous calls to touchstart 
